fixed scrollbar on Mozilla

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
 
 html {
     scrollbar-width: thin;
-    scrollbar-color: #515151 #1e1e2f ;
+    scrollbar-color: #6e6e6e #5a5a5a ;
     scroll-behavior: smooth;
 }
 
